src/objects/Merit_Group__c.object
<CustomObject>
    <description>This will temporarily hold a weekly extract of groups from SBam and Merit databases to be used on the BEO Explore page for ETSBE</description>
    <fields>
        <fullName>Assigned_Broker__c</fullName>
        <description>This will hold the Reward Account Name tied to the group</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Broker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Email__c</fullName>
        <description>Email for Client Manager</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CM_First_Name__c</fullName>
        <description>First name for Client Manager</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CM First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Last_Name__c</fullName>
        <description>Last Name for Client Manager</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CM Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Phone__c</fullName>
        <description>Phone for Client Manager</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Will hold the salesforce id of the record given from the SBam database</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>This will hold the funding type for a group. Will either be ASO, FI or ASO &amp; FI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>This will be the name of the group related to the group/policy number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>This will be the group number tied to a group name and policy number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Plan_Major__c</fullName>
        <description>This will hold the health plan major for the related Policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Health Plan Major</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Plan_Minor__c</fullName>
        <description>This will hold the health plan minor for the related Policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Health Plan Minor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>This will hold the line of business for the group.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Line of Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>This will hold the platform for the group.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Platform</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <description>This will hold the policy number related to the group name/number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Renewal_Date__c</fullName>
        <description>This will hold the policy renewal date for the selected policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This will hold the region for the group/policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCE_Email__c</fullName>
        <description>Email for Strategic Client Executive</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SCE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SCE_First_Name__c</fullName>
        <description>First Name for Strategic Client Executive</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SCE First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCE_Last_Name__c</fullName>
        <description>Last Name for Strategic Client Executive</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SCE Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCE_Phone__c</fullName>
        <description>Phone for Strategic Client Executive</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SCE Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>This will hold the sales office for the selected policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <description>This will hold the state abbreviation for the selected policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Situs State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Merit Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Policy_Number__c</columns>
        <columns>Policy_Renewal_Date__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Platform__c</columns>
        <columns>Region__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Assigned_Broker__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Merit Groups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merit Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>